--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "framer-motion": "^3.10.6",
     "next": "13.2.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
