--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "autoprefixer": "^10.4.14",
     "nodemon": "^2.0.22",
     "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4"
+    "tailwindcss": "^3.3.2"
   }
 }
