--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@types/react-dom": "^18.2.1",
     "axios": "^1.4.0",
     "eslint": "^8.39.0",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "framer-motion": "^10.12.4",
     "react": "^18.2.0",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toggle-dark-mode": "^1.1.1",
+    "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
